<resources>
    <string name="app_name">My Music History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_top_artists">Top Artists</string>
    <string name="menu_top_albums">Top Albums</string>
    <string name="menu_top_songs">Top Songs</string>
    <string name="menu_listens">Listens</string>
    <string name="artist_name">artist name</string>
    <string name="song_title">song title</string>
    <string name="album_title">album title</string>
    <string name="album_cover">album cover</string>
    <string name="listen_time">listen time</string>
    <string name="listen_count">listen count</string>
    <string name="start_date_message">Start date:</string>
    <string name="end_date_message">End date:</string>

    <string name="account_key">MMH-account-name</string>
    <string name="username_key"> </string>


    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Sign Up hints -->
    <string name="signup_input_name_hint">Username</string>
    <string name="signup_input_email_hint">Email</string>
    <string name="signup_input_password_hint">Password</string>
    <string name="signup_input_repeat_password_hint">Re-enter Password</string>
    <string name="signup_create_account_button">Create Account</string>
    <string name="sign_up_input_nickName_hint">Nickname</string>
    <string name="sign_up_input_birthDate_hint">Birth Date</string>
    <string name="sign_up_input_gender_hint">Gender</string>


    <string name="login_link">Already a member? Login</string>
    <string name="singUp_link">No account yet? Create one</string>

    <!-- Login hints -->
    <string name="login_input_name_hint">Email</string>
    <string name="login_input_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="action_log_out">Log out</string>
    <string name="gender_radio_group_banner">Gender</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_other">Other</string>
    <string name="gender_secret">Prefer not to tell</string>
    <string name="country_banner">Country</string>
    <string name="three_dots_listen_menu_description">Three Dots Listen Menu</string>
    <string name="listen_delete_sign">Delete</string>
    <string name="listen_edit_sign">Edit</string>
    <string name="edit_listen_song">Song:</string>
    <string name="edit_listen_album">Album:</string>
    <string name="edit_listen_artist">Artist:</string>

    <string-array name="gender_spinner">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
        <item>Prefer not to tell</item>
    </string-array>

</resources>
