<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_listen_song"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_listen_album" />

    <EditText
        android:id="@+id/editAlbumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_listen_artist" />

    <EditText
        android:id="@+id/editArtistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>